--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <tr>
        <td id="hydrogen" class="solids" tabindex="0"><span class="bigfont2">Hydrogen</span>
           <ul>
-             <li data-symbol="h">atomic symbol:<span class="bigfont1">H</span></li>
+             <li data-symbol="h">atomic symbol:<span class="bigfont1" aria-label="Learn more about our mobile plans">H</span></li>
              <li data-atomicnumber="1">atomic number:<span class="bigfont1">1</span></li>
              <li data-weight="hydrogen">atomic weight:<span class="bigfont1">1.008</span></li>
              <li data-groundstate="hydrogen">ground state:<span class="bigfont1">1 s</span></li>
