--- a/index_backup1.html
+++ b/index_backup1.html
@@ -61,11 +61,11 @@
     <tr>
        <td id="hydrogen" class="solids" tabindex="0"><span class="bigfont2">Hydrogen</span>
           <ul>
-             <li data-symbol="h"><span class="left">atomic symbol:</span> <span class="bigfont1 right">H</span></li>
-             <li data-atomicnumber="1"><span class="left">atomic number:</span> <span class="bigfont1 right">1</span></li>
-             <li data-weight="hydrogen"><span class="left">atomic weight:</span> <span class="bigfont1 right">1.008</span></li>
-             <li data-groundstate="hydrogen"><span class="left">ground state:</span> <span class="bigfont1 right">1 s</span></li>
-             <li data-ev="hydrogen"><span class="left">ionization energy:</span> <span class="bigfont1 right">13.5984</span></li> 
+             <li data-symbol="h"><span class="bigfont1" aria-label="atomic symbol">H</span></li>
+             <li data-atomicnumber="1"><span class="bigfont1" aria-label="atomic number">1</span></li>
+             <li data-weight="hydrogen"><span class="bigfont1" aria-label="standard atomic weight">1.008</span></li>
+             <li data-groundstate="hydrogen"><span class="bigfont1" aria-label="ground state">1 s</span></li>
+             <li data-ev="hydrogen"><span class="bigfont1" aria-label="ionization energy">13.5984</span></li> 
           </ul>
        </td>
       <td class="hidden">Row 1, Cell 2</td>
@@ -296,7 +296,7 @@ function searchElement() {
   }
 }
 </script>
-  <!--  end js from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_filter_table -->     
+ <!--  end js from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_filter_table --> 
      
  <!-- Optional JavaScript -->
  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -304,4 +304,3 @@ function searchElement() {
 
  </body>   
 </html>
- 
