--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
     <tr>
        <td id="hydrogen" class="solids" tabindex="0"><span class="bigfont2">Hydrogen</span>
           <ul>
-             <li data-symbol="h"><span class="bigfont1" aria-label="atomic symbol">H</span></li>
-             <li data-atomicnumber="1"><span class="bigfont1" aria-label="atomic number">1</span></li>
-             <li data-weight="hydrogen"><span class="bigfont1" aria-label="standard atomic weight">1.008</span></li>
-             <li data-groundstate="hydrogen"><span class="bigfont1" aria-label="ground state">1 s</span></li>
-             <li data-ev="hydrogen"><span class="bigfont1" aria-label="ionization energy">13.5984</span></li> 
+             <li data-symbol="h"><span class="bigfont1" aria-label="atomic symbol H">H</span></li>
+             <li data-atomicnumber="1"><span class="bigfont1" aria-label="atomic number 1">1</span></li>
+             <li data-weight="hydrogen"><span class="bigfont1" aria-label="standard atomic weight 1 point 008">1.008</span></li>
+             <li data-groundstate="hydrogen"><span class="bigfont1" aria-label="ground state one s">1s</span></li>
+             <li data-ev="hydrogen"><span class="bigfont1" aria-label="ionization energy thirteen point 5984">13.5984</span></li> 
           </ul>
        </td>
       <td class="hidden">Row 1, Cell 2</td>
