--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
  </head>
 
   <body>
-  <a class="at" href="#main">Skip to main content</a> 
-        <div class="left100 bottom50">
-           <p tabindex="0">The elements are set up in a table, one element per cell. Each table cell contains the name of the element, and a list of five items containing the atomic number, the atomic symbol, the atomic weight, the ground state configuration, and the ionization energy.</p>
+     <div class="left100 bottom50">
+     <h1>Searchable Periodic Table</h1>
+      <p tabindex="0">The elements are set up in a table, one element per cell. Each table cell contains the name of the element, and a list of five items containing the atomic number, the atomic symbol, the atomic weight, the ground state configuration, and the ionization energy.</p>
            <p tabindex="0">Tab</p>
          </div>
      
    <div class="left100 bottom50">
-      <label for="nameInput">Search Names</label>
-   <input type="text" id="nameInput" onkeyup="myFunction()" placeholder="Search for names..">
-  </div>
+      <label for="elementNameInput">Search Element Names</label>
+        <input type="text" id="elementNameInput" onkeyup="elementNameSearch()" placeholder="Search for element names..">
+   </div>
 
-<div class="left100" id="main">
+<div class="left100">
 <table>
   <thead>
     <tr>
