--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
   font-weight: bold;
     border-style: transparent;	
 }	
+ /* second css for table search */     
+.containerDiv{
+    display: block; 
+    margin: auto; 
+    width: 300px;
+}
+#nameContainer > p {
+    display: inline-block;
+    margin: 20px;
+}
+input{
+   width: 200px;
+   font-size: 20px;
+}      
 </style>
  </head>
 
