--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ function searchElementFunction() {
   input = document.getElementById("indexinput");
   filter = input.value.toUpperCase();
   table = document.getElementById("indexTable");
-  tr = table.getElementsByTagName("tr")[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17];
+  tr = table.getElementsByTagName("tr");
   for (i = 0; i < tr.length; i++) {
     td = tr[i].getElementsByTagName("td")[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17];
     if (td) {
