--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ function searchElementFunction() {
   table = document.getElementById("indexTable");
   tr = table.getElementsByTagName("tr");
   for (i = 0; i < tr.length; i++) {
-    td = tr[i].getElementsByTagName("td")[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17];
+    td = tr[i].getElementsByTagName("td")[0];
     if (td) {
       txtValue = td.textContent || td.innerText;
       if (txtValue.toUpperCase().indexOf(filter) > -1) {
@@ -310,6 +310,18 @@ function searchElementFunction() {
       }
     }       
   }
+ for (i = 0; i < tr.length; i++) {
+ td = tr[i].getElementsByTagName("td")[1];
+ if (td) {
+   txtValue = td.textContent || td.innerText;
+   if (txtValue.toUpperCase().indexOf(filter) > -1) {
+     tr[i].style.display = "";
+   } else {
+     tr[i].style.display = "none";
+   }
+ }       
+} 
+   
 }
 
 </script>
