--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 * {
   box-sizing: border-box;
 }
-#indexTable th {
+#table_id th {
   font-weight: bold;
   background-color:#8B0000;
   color: white;
 }
-#indexTable th, #indexTable td {
+#table_id th, #table_id td {
   font-weight: bold;
     border-style: transparent;	
 }	
@@ -39,14 +39,12 @@
  </head>
 
   <body>
-     <div class="left100 bottom50">
-     <h1>Searchable Periodic Table</h1>
-      <p tabindex="0">The elements are set up in a table, one element per cell. Each table cell contains the name of the element, and a list of five items containing the atomic number, the atomic symbol, the atomic weight, the ground state configuration, and the ionization energy.</p>
-           <p tabindex="0">Tab</p>
-         </div>
-     
-   
-  
+<div class="left100 bottom50">
+<h1>Searchable Periodic Table</h1>
+<p tabindex="0">The elements are set up in a table, one element per cell. Each table cell contains the name of the element, and a list of five items containing the atomic number, the atomic symbol, the atomic weight, the ground state configuration, and the ionization energy.</p>
+<p tabindex="0">Tab</p>
+</div>
+
 <div class="left100 bottom50">
  <label for="search_field_input">Search Elements (Alphabetical Search):</label>
  <input id="search_field_input" onkeyup="search_table()" type="text">
@@ -104,13 +102,12 @@
       <td class="hidden">Row 1, Cell 17</td>
       <td id="helium" class="gases" tabindex="0">Helium
            <ul>
-             <li data-symbol="He">He</li>
-             <li data-atomicnumber="2">2</li>
-             <li data-weight="helium">4.0026</li>
+             <li data-atomicnumber="2"><span class="bigfont1" aria-label="atomic number two">2</span></li>
+             <li data-symbol="h e"><span class="bigfont2" aria-label="atomic symbol H">H e</span></li>
+             <li data-weight="helium"><span class="bigfont1" aria-label="standard atomic weight four point zero zero two six">4.0026</span></li>
              <li data-ev="helium">24.5874</li>
              <li data-groundstate="hydrogen">1 s ^</li>  
           </ul>
-       
        </td>
     </tr>
     <tr>
