--- a/index.html
+++ b/index.html
@@ -129,16 +129,16 @@
              <li data-ev="beryllium">9.3227</li>
           </ul>
         </td>
-      <td>Row 2, Cell 3</td>
-      <td>Row 2, Cell 4</td>
-      <td>Row 2, Cell 5</td>
-      <td>Row 2, Cell 6</td>
-      <td>Row 2, Cell 7</td>
-      <td>Row 2, Cell 8</td>
-      <td>Row 2, Cell 9</td>
-      <td>Row 2, Cell 10</td>
-      <td>Row 2, Cell 11</td>
-      <td>Row 2, Cell 12</td>
+      <td class="hidden">Row 2, Cell 3</td>
+      <td class="hidden">Row 2, Cell 4</td>
+      <td class="hidden">Row 2, Cell 5</td>
+      <td class="hidden">Row 2, Cell 6</td>
+      <td class="hidden">Row 2, Cell 7</td>
+      <td class="hidden">Row 2, Cell 8</td>
+      <td class="hidden">Row 2, Cell 9</td>
+      <td class="hidden">Row 2, Cell 10</td>
+      <td class="hidden">Row 2, Cell 11</td>
+      <td class="hidden">Row 2, Cell 12</td>
       <td>Row 2, Cell 13</td>
       <td>Row 2, Cell 14</td>
       <td>Row 2, Cell 15</td>
