--- a/index_backup1.html
+++ b/index_backup1.html
@@ -26,12 +26,12 @@
 * {
   box-sizing: border-box;
 }
-#indexTable th {
+#table_id th {
   font-weight: bold;
   background-color:#8B0000;
   color: white;
 }
-#indexTable th, #indexTable td {
+#table_id th, #table_id td {
   font-weight: bold;
     border-style: transparent;	
 }	
@@ -39,14 +39,12 @@
  </head>
 
   <body>
-     <div class="left100 bottom50">
-     <h1>Searchable Periodic Table</h1>
-      <p tabindex="0">The elements are set up in a table, one element per cell. Each table cell contains the name of the element, and a list of five items containing the atomic number, the atomic symbol, the atomic weight, the ground state configuration, and the ionization energy.</p>
-           <p tabindex="0">Tab</p>
-         </div>
-     
-   
-  
+<div class="left100 bottom50">
+<h1>Searchable Periodic Table</h1>
+<p tabindex="0">The elements are set up in a table, one element per cell. Each table cell contains the name of the element, and a list of five items containing the atomic number, the atomic symbol, the atomic weight, the ground state configuration, and the ionization energy.</p>
+<p tabindex="0">Tab</p>
+</div>
+
 <div class="left100 bottom50">
  <label for="search_field_input">Search Elements (Alphabetical Search):</label>
  <input id="search_field_input" onkeyup="search_table()" type="text">
@@ -56,7 +54,7 @@
   <thead>
     <tr>
       <th>Group IA</th>
-      <th>Header 2</th>
+      <th>Group IIA</th>
       <th>Header 3</th>
       <th>Header 4</th>
       <th>Header 5</th>
@@ -67,17 +65,17 @@
       <th>Header 10</th>
       <th>Header 11</th>
       <th>Header 12</th>
-      <th>Header 13</th>
-      <th>Header 14</th>
-      <th>Header 15</th>
-      <th>Header 16</th>
-      <th>Header 17</th>
-      <th>Header 18</th>
+      <th>Header III A</th>
+      <th>Header IV A</th>
+      <th>Header V A</th>
+      <th>Header VI A</th>
+      <th>Header VII A</th>
+      <th>Header VIII A</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-       <td id="hydrogen" class="solids" tabindex="0">Hydrogen
+       <td id="hydrogen" class="gases" tabindex="0">Hydrogen
           <ul>
              <li data-atomicnumber="1"><span class="bigfont1" aria-label="atomic number one">1</span></li>
              <li data-symbol="h"><span class="bigfont2" aria-label="atomic symbol H">H</span></li>
@@ -102,15 +100,14 @@
       <td class="hidden">Row 1, Cell 15</td>
       <td class="hidden">Row 1, Cell 16</td>
       <td class="hidden">Row 1, Cell 17</td>
-      <td id="helium" class="gases" tabindex="0">Helium
+      <td id="helium" class="solids" tabindex="0">Helium
            <ul>
-             <li data-symbol="He">He</li>
-             <li data-atomicnumber="2">2</li>
-             <li data-weight="helium">4.0026</li>
+             <li data-atomicnumber="2"><span class="bigfont1" aria-label="atomic number two">2</span></li>
+             <li data-symbol="h e"><span class="bigfont2" aria-label="atomic symbol H">H e</span></li>
+             <li data-weight="helium"><span class="bigfont1" aria-label="standard atomic weight four point zero zero two six">4.0026</span></li>
              <li data-ev="helium">24.5874</li>
              <li data-groundstate="hydrogen">1 s ^</li>  
           </ul>
-       
        </td>
     </tr>
     <tr>
@@ -123,17 +120,25 @@
              <li data-ev="lithium">5.3917</li>
           </ul>
         </td>
-      <td>Row 2, Cell 2</td>
-      <td>Row 2, Cell 3</td>
-      <td>Row 2, Cell 4</td>
-      <td>Row 2, Cell 5</td>
-      <td>Row 2, Cell 6</td>
-      <td>Row 2, Cell 7</td>
-      <td>Row 2, Cell 8</td>
-      <td>Row 2, Cell 9</td>
-      <td>Row 2, Cell 10</td>
-      <td>Row 2, Cell 11</td>
-      <td>Row 2, Cell 12</td>
+        <td id="beryllium" class="solids" tabindex="0">Beryllium
+          <ul>
+             <li data-atomicnumber="4">4</li>
+             <li data-symbol="beryllium">B e</li>
+             <li data-weight="beryllium">9.0122</li>
+             <li data-groundstate="beryllium">1s^2 2s^2</li>
+             <li data-ev="beryllium">9.3227</li>
+          </ul>
+        </td>
+      <td class="hidden">Row 2, Cell 3</td>
+      <td class="hidden">Row 2, Cell 4</td>
+      <td class="hidden">Row 2, Cell 5</td>
+      <td class="hidden">Row 2, Cell 6</td>
+      <td class="hidden">Row 2, Cell 7</td>
+      <td class="hidden">Row 2, Cell 8</td>
+      <td class="hidden">Row 2, Cell 9</td>
+      <td class="hidden">Row 2, Cell 10</td>
+      <td class="hidden">Row 2, Cell 11</td>
+      <td class="hidden">Row 2, Cell 12</td>
       <td>Row 2, Cell 13</td>
       <td>Row 2, Cell 14</td>
       <td>Row 2, Cell 15</td>
@@ -287,9 +292,7 @@
   <div  class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
      <ul>
-        <li>content: 23 November 2019</li>
-        <li>Removed Bootstrap 11 November 2019</li>
-        <li>No tabinidex used</li>
+        <li>content: 25 November 2019</li>
      </ul>
   </div>
   <!-- https://stackoverflow.com/questions/9127498/how-to-perform-a-real-time-search-and-filter-on-a-html-table -->
