--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
        <td id="hydrogen" class="gases" tabindex="0">Hydrogen
           <ul>
              <li data-atomicnumber="1"><span class="bigfont1" aria-label="atomic number one">1</span></li>
-             <li data-symbol="h"><span class="bigfont2" aria-label="atomic symbol H">H</span></li>
+             <li data-symbol="h"><span class="bigfont2 em-tight" aria-label="atomic symbol H">H</span></li>
              <li data-weight="hydrogen"><span class="bigfont1" aria-label="standard atomic weight one point zero zero eight">1.008</span></li>
              <li data-groundstate="hydrogen"><span class="bigfont1" aria-label="ground state one s">1s</span></li>
              <li data-ev="hydrogen"><span class="bigfont1" aria-label="ionization energy thirteen point five nine eight four">13.5984</span></li> 
@@ -103,7 +103,7 @@
       <td id="helium" class="solids" tabindex="0">Helium
            <ul>
              <li data-atomicnumber="2"><span class="bigfont1" aria-label="atomic number two">2</span></li>
-             <li data-symbol="h e"><span class="bigfont2" aria-label="atomic symbol H">H e</span></li>
+             <li data-symbol="h e"><span "class="bigfont2 em-tight" aria-label="atomic symbol H">H e</span></li>
              <li data-weight="helium"><span class="bigfont1" aria-label="standard atomic weight four point zero zero two six">4.0026</span></li>
              <li data-ev="helium">24.5874</li>
              <li data-groundstate="hydrogen">1 s ^</li>  
@@ -114,7 +114,7 @@
        <td id="lithium" class="solids" tabindex="0">Lithium
           <ul>
              <li data-atomicnumber="3">3</li>
-             <li data-symbol="lithium">L i</li>
+             <li data-symbol="lithium" class="bigfont2 em-tight">L i</li>
              <li data-weight="lithium">1.008</li>
              <li data-groundstate="lithium">1s^2 2s</li>
              <li data-ev="lithium">5.3917</li>
@@ -123,7 +123,7 @@
         <td id="beryllium" class="solids" tabindex="0">Beryllium
           <ul>
              <li data-atomicnumber="4">4</li>
-             <li data-symbol="beryllium">B e</li>
+             <li data-symbol="beryllium" class="bigfont2 em-tight">B e</li>
              <li data-weight="beryllium">9.0122</li>
              <li data-groundstate="beryllium">1s^2 2s^2</li>
              <li data-ev="beryllium">9.3227</li>
