--- a/index.html
+++ b/index.html
@@ -299,12 +299,22 @@
              <li data-atomicnumber="17"><span class="bigfont1" aria-label="atomic number 17">17</span></li>
              <li data-symbol="cl" aria-label="atomic symbol C l" class="bigfont2">C<span class="letter-tight">l</span></li>
              <li data-element="chlorine"><span class="bigfont1" aria-label="element">Chlorine</span></li>
-             <li data-weight="35.45"><span class="bigfont1" aria-label="standard atomic weight 35 . 4 5"> 35.45</span></li>
+             <li data-weight="35.45"><span class="bigfont1" aria-label="standard atomic weight 35 . 4 5">35.45</span></li>
              <li data-groundstate="chlorine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
              <li data-ev="12.9676"><span class="bigfont1" aria-label="ionization energy 12 . 9 6 7 6">12.9676</span></li> 
           </ul>
       </td>
-      <td>Row 3, Cell 18</td>
+      <td id="argon" class="gases" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="18"><span class="bigfont1" aria-label="atomic number 18">18</span></li>
+             <li data-symbol="ar" aria-label="atomic symbol A r" class="bigfont2">A<span class="letter-tight">r</span></li>
+             <li data-element="argon"><span class="bigfont1" aria-label="element">Argon</span></li>
+             <li data-weight="39.948"><span class="bigfont1" aria-label="standard atomic weight 39 . 9 4 8">39.948</span></li>
+             <li data-groundstate="argon"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="15.7596"><span class="bigfont1" aria-label="ionization energy 15 . 7 5 9 6">15.7596</span></li> 
+          </ul>
+      </td>
     </tr>
     <tr>
       <td>Row 4, Cell 1</td>
