--- a/index_backup2.html
+++ b/index_backup2.html
@@ -299,15 +299,35 @@
              <li data-atomicnumber="17"><span class="bigfont1" aria-label="atomic number 17">17</span></li>
              <li data-symbol="cl" aria-label="atomic symbol C l" class="bigfont2">C<span class="letter-tight">l</span></li>
              <li data-element="chlorine"><span class="bigfont1" aria-label="element">Chlorine</span></li>
-             <li data-weight="35.45"><span class="bigfont1" aria-label="standard atomic weight 35 . 4 5"> 35.45</span></li>
+             <li data-weight="35.45"><span class="bigfont1" aria-label="standard atomic weight 35 . 4 5">35.45</span></li>
              <li data-groundstate="chlorine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
              <li data-ev="12.9676"><span class="bigfont1" aria-label="ionization energy 12 . 9 6 7 6">12.9676</span></li> 
           </ul>
       </td>
-      <td>Row 3, Cell 18</td>
+      <td id="argon" class="gases" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="18"><span class="bigfont1" aria-label="atomic number 18">18</span></li>
+             <li data-symbol="ar" aria-label="atomic symbol A r" class="bigfont2">A<span class="letter-tight">r</span></li>
+             <li data-element="argon"><span class="bigfont1" aria-label="element">Argon</span></li>
+             <li data-weight="39.948"><span class="bigfont1" aria-label="standard atomic weight 39 . 9 4 8">39.948</span></li>
+             <li data-groundstate="argon"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="15.7596"><span class="bigfont1" aria-label="ionization energy 15 . 7 5 9 6">15.7596</span></li> 
+          </ul>
+      </td>
     </tr>
     <tr>
-      <td>Row 4, Cell 1</td>
+      <td id="potassium" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="19"><span class="bigfont1" aria-label="atomic number 19">19</span></li>
+             <li data-symbol="k" aria-label="atomic symbol K" class="bigfont2">K<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="potassium"><span class="bigfont1" aria-label="element">Potassium</span></li>
+             <li data-weight="39.098"><span class="bigfont1" aria-label="standard atomic weight 39 . 0 9 8">39.098</span></li>
+             <li data-groundstate="potassium"><span class="bigfont1" aria-label="ground [Ar]4s">[Ar]4s</span></li>
+             <li data-ev="4.3407"><span class="bigfont1" aria-label="ionization energy 4 . 3 4 0 7">4.3407</span></li> 
+          </ul>
+      </td>
       <td>Row 4, Cell 2</td>
       <td>Row 4, Cell 3</td>
       <td>Row 4, Cell 4</td>
