--- a/index_backup1.html
+++ b/index_backup1.html
@@ -334,12 +334,34 @@
              <li data-atomicnumber="20"><span class="bigfont1" aria-label="atomic number 20">20</span></li>
              <li data-symbol="ca" aria-label="atomic symbol C a" class="bigfont2">C<span class="letter-tight">a</span></li>
              <li data-element="calcium"><span class="bigfont1" aria-label="element">Calcium</span></li>
-             <li data-weight="40.078"><span class="bigfont1" aria-label="standard atomic weight 40 . 078">40.078</span></li>
+             <li data-weight="40.078"><span class="bigfont1" aria-label="standard atomic weight 40 . 0 7 8">40.078</span></li>
              <li data-groundstate="calcium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
              <li data-ev="6.1132"><span class="bigfont1" aria-label="ionization energy 6 . 1 1 3 2">6.1132</span></li> 
           </ul>
       </td>
-      <td>Row 4, Cell 3</td>
+       <td id="scandium" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="21"><span class="bigfont1" aria-label="atomic number 21">21</span></li>
+             <li data-symbol="sc" aria-label="atomic symbol S c" class="bigfont2">S<span class="letter-tight">c</span></li>
+             <li data-element="scandium"><span class="bigfont1" aria-label="element">Scandium</span></li>
+             <li data-weight="44.956"><span class="bigfont1" aria-label="standard atomic weight 44 . 9 5 6">44.956</span></li>
+             <li data-groundstate="scandium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="6.5615"><span class="bigfont1" aria-label="ionization energy 6 . 5 6 1 5">6.5615</span></li> 
+          </ul>
+      </td>  
+          
+       <td id="titanium" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="22"><span class="bigfont1" aria-label="atomic number 22">22</span></li>
+             <li data-symbol="ti" aria-label="atomic symbol T i" class="bigfont2">T<span class="letter-tight">i</span></li>
+             <li data-element="titanium"><span class="bigfont1" aria-label="element">Titanium</span></li>
+             <li data-weight="47.867"><span class="bigfont1" aria-label="standard atomic weight 47 . 8 6 7">47.867</span></li>
+             <li data-groundstate="titanium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="6.8281"><span class="bigfont1" aria-label="ionization energy 6 . 8 2 8 1">6.8281</span></li> 
+          </ul>
+      </td>
       <td>Row 4, Cell 4</td>
       <td>Row 4, Cell 5</td>
       <td>Row 4, Cell 6</td>
