--- a/index.html
+++ b/index.html
@@ -349,8 +349,7 @@
              <li data-groundstate="scandium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
              <li data-ev="6.5615"><span class="bigfont1" aria-label="ionization energy 6 . 5 6 1 5">6.5615</span></li> 
           </ul>
-      </td>  
-          
+      </td>       
        <td id="titanium" class="solids" tabindex="0">
            <ul>
             <ul>
@@ -362,7 +361,17 @@
              <li data-ev="6.8281"><span class="bigfont1" aria-label="ionization energy 6 . 8 2 8 1">6.8281</span></li> 
           </ul>
       </td>
-      <td>Row 4, Cell 4</td>
+      <td id="vanadium" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="23"><span class="bigfont1" aria-label="atomic number 23">23</span></li>
+             <li data-symbol="v" aria-label="atomic symbol V " class="bigfont2">V<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="vanadium"><span class="bigfont1" aria-label="element">Vanadium</span></li>
+             <li data-weight="50.942"><span class="bigfont1" aria-label="standard atomic weight 50 . 9 4 2">50.942</span></li>
+             <li data-groundstate="vanadium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="6.7462"><span class="bigfont1" aria-label="ionization energy 6 . 7 4 6 2">6.7462</span></li> 
+          </ul>
+      </td>
       <td>Row 4, Cell 5</td>
       <td>Row 4, Cell 6</td>
       <td>Row 4, Cell 7</td>
