--- a/index_backup1.html
+++ b/index_backup1.html
@@ -349,8 +349,7 @@
              <li data-groundstate="scandium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
              <li data-ev="6.5615"><span class="bigfont1" aria-label="ionization energy 6 . 5 6 1 5">6.5615</span></li> 
           </ul>
-      </td>  
-          
+      </td>       
        <td id="titanium" class="solids" tabindex="0">
            <ul>
             <ul>
@@ -362,8 +361,28 @@
              <li data-ev="6.8281"><span class="bigfont1" aria-label="ionization energy 6 . 8 2 8 1">6.8281</span></li> 
           </ul>
       </td>
-      <td>Row 4, Cell 4</td>
-      <td>Row 4, Cell 5</td>
+      <td id="vanadium" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="23"><span class="bigfont1" aria-label="atomic number 23">23</span></li>
+             <li data-symbol="v" aria-label="atomic symbol V " class="bigfont2">V<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="vanadium"><span class="bigfont1" aria-label="element">Vanadium</span></li>
+             <li data-weight="50.942"><span class="bigfont1" aria-label="standard atomic weight 50 . 9 4 2">50.942</span></li>
+             <li data-groundstate="vanadium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="6.7462"><span class="bigfont1" aria-label="ionization energy 6 . 7 4 6 2">6.7462</span></li> 
+          </ul>
+      </td>
+      <td id="chromium" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="24"><span class="bigfont1" aria-label="atomic number 24">24</span></li>
+             <li data-symbol="c r" aria-label="atomic symbol C r " class="bigfont2">C<span class="letter-tight">r</span></li>
+             <li data-element="chromium"><span class="bigfont1" aria-label="element">Chromium</span></li>
+             <li data-weight="51.996"><span class="bigfont1" aria-label="standard atomic weight 51 . 9 9 6">51.996</span></li>
+             <li data-groundstate="chromium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="6.7665"><span class="bigfont1" aria-label="ionization energy 6 . 7 6 6 5">6.7665</span></li> 
+          </ul>
+      </td>
       <td>Row 4, Cell 6</td>
       <td>Row 4, Cell 7</td>
       <td>Row 4, Cell 8</td>
@@ -484,7 +503,7 @@
   <div  class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
      <ul>
-        <li>content: 25 November 2019</li>
+        <li>content: 26 November 2019</li>
      </ul>
   </div>
   <!-- https://stackoverflow.com/questions/9127498/how-to-perform-a-real-time-search-and-filter-on-a-html-table -->
