--- a/index_backup1.html
+++ b/index_backup1.html
@@ -376,15 +376,35 @@
            <ul>
             <ul>
              <li data-atomicnumber="24"><span class="bigfont1" aria-label="atomic number 24">24</span></li>
-             <li data-symbol="c r" aria-label="atomic symbol C r " class="bigfont2">C<span class="letter-tight">r</span></li>
+             <li data-symbol="cr" aria-label="atomic symbol C r " class="bigfont2">C<span class="letter-tight">r</span></li>
              <li data-element="chromium"><span class="bigfont1" aria-label="element">Chromium</span></li>
              <li data-weight="51.996"><span class="bigfont1" aria-label="standard atomic weight 51 . 9 9 6">51.996</span></li>
              <li data-groundstate="chromium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
              <li data-ev="6.7665"><span class="bigfont1" aria-label="ionization energy 6 . 7 6 6 5">6.7665</span></li> 
           </ul>
       </td>
-      <td>Row 4, Cell 6</td>
-      <td>Row 4, Cell 7</td>
+       <td id="manganese" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="25"><span class="bigfont1" aria-label="atomic number 25">25</span></li>
+             <li data-symbol="mn" aria-label="atomic symbol M n " class="bigfont2">M<span class="letter-tight">n</span></li>
+             <li data-element="manganese"><span class="bigfont1" aria-label="element">Manganese</span></li>
+             <li data-weight="54.938"><span class="bigfont1" aria-label="standard atomic weight 54 . 9 3 8">54.938</span></li>
+             <li data-groundstate="manganese"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7 . 4 3 4 0"><span class="bigfont1" aria-label="ionization energy 7 . 4 3 4 0">7 . 4 3 4 0</span></li> 
+          </ul>
+      </td>
+         <td id="iron" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="26"><span class="bigfont1" aria-label="atomic number 26">26</span></li>
+             <li data-symbol="fe" aria-label="atomic symbol F e " class="bigfont2">F<span class="letter-tight">e</span></li>
+             <li data-element="iron"><span class="bigfont1" aria-label="element">Iron</span></li>
+             <li data-weight="55.845"><span class="bigfont1" aria-label="standard atomic weight 55 . 8 4 5">55.845</span></li>
+             <li data-groundstate="iron"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7 . 9 0 2 5"><span class="bigfont1" aria-label="ionization energy 7 . 9 0 2 5">7.9025</span></li> 
+          </ul>
+      </td>
       <td>Row 4, Cell 8</td>
       <td>Row 4, Cell 9</td>
       <td>Row 4, Cell 10</td>
