--- a/index_backup2.html
+++ b/index_backup2.html
@@ -394,8 +394,28 @@
              <li data-ev="7 . 4 3 4 0"><span class="bigfont1" aria-label="ionization energy 7 . 4 3 4 0">7 . 4 3 4 0</span></li> 
           </ul>
       </td>
-      <td>Row 4, Cell 7</td>
-      <td>Row 4, Cell 8</td>
+         <td id="iron" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="26"><span class="bigfont1" aria-label="atomic number 26">26</span></li>
+             <li data-symbol="fe" aria-label="atomic symbol F e " class="bigfont2">F<span class="letter-tight">e</span></li>
+             <li data-element="iron"><span class="bigfont1" aria-label="element">Iron</span></li>
+             <li data-weight="55.845"><span class="bigfont1" aria-label="standard atomic weight 55 . 8 4 5">55.845</span></li>
+             <li data-groundstate="iron"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7 . 9 0 2 5"><span class="bigfont1" aria-label="ionization energy 7 . 9 0 2 5">7.9025</span></li> 
+          </ul>
+      </td>
+      <td id="cobalt" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="27"><span class="bigfont1" aria-label="atomic number 27">27</span></li>
+             <li data-symbol="co" aria-label="atomic symbol C o " class="bigfont2">C<span class="letter-tight">o</span></li>
+             <li data-element="cobalt"><span class="bigfont1" aria-label="element">Cobalt</span></li>
+             <li data-weight="58.933"><span class="bigfont1" aria-label="standard atomic weight 58 . 9 3 3">58.933</span></li>
+             <li data-groundstate="cobalt"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7.8810"><span class="bigfont1" aria-label="ionization energy 7 . 8 8 1 0">7.8810</span></li> 
+          </ul>
+      </td>
       <td>Row 4, Cell 9</td>
       <td>Row 4, Cell 10</td>
       <td>Row 4, Cell 11</td>
